--- a/page/main.css
+++ b/page/main.css
@@ -111,7 +111,7 @@ body {
 }
 .form .option-input:checked + label, .form .checkbox-input:checked + label {
   color: white;
-  border: 1px solid black;
+  background: grey;
 }
 
 .form .button {
